--- a/kontakt.html
+++ b/kontakt.html
@@ -171,6 +171,11 @@
 </script>
 
 <script type="text/javascript">
+
+
+alert("Budite slobodni da nas pitate sve sto Vas interesuje. U najkracem roku cemo odgovoriti!");
+
+
 var map;
 var plain = new google.maps.LatLng(44.772790, 20.475015);
 var mapCoordinates = new google.maps.LatLng(44.772790, 20.475015);
